<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_avatar_author">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Likes</string>
    <string name="description_repost">Reposts</string>
    <string name="description_views">Views</string>>
    <string name="menu_remove">Remove</string>>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post text</string>>
    <string name="post_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="post_edit">Edit Post</string>
    <string name="description_post_edit">Edit Post</string>
    <string name="description_cancel">Cancel edit</string>
    <string name="no_apps">No apps supporting this format</string>
    <string name="ok">OK</string>
    <string name="sharing_title">Share</string>
    <string name="add_post">Add Post</string>
    <string name="video">Video</string>
    <string name="play_video">Play video</string>
    <string name="new_post">New Post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s posted a new post:</string>
    <string name="unknown_notification_type">Unknown notification type</string>
    <string name="try_updating">Try updating the app</string>
    <string name="no_posts">No posts</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="attachment">Attachment</string>
    <string name="respons_is_expected">A response is expected from the server</string>
    <string name="saving">Saving is in progress on the server</string>
    <string name="connection_error">Server connection error</string>
    <string name="error_loading">Error_loading</string>
    <string name="description_post_not_saved_on_the_server">Post not saved on the server</string>
    <string name="recent_entries_fab">Recent entries</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_back">Back</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_logout">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="sign_in_dialog">Sign In to NMedia?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_name">Name</string>
    <string name="retry_pass">Retry password</string>
    <string name="register">Register</string>
    <string name="description_avatar">Avatar</string>
    <string name="change_photo">Change avatar</string>
    <string name="notification_from_the_server">Notification from the server</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="week_ago">Week ago</string>
    <string name="two_weeks_ago">Two week ago</string>
</resources>
