<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/reg_avatar_size"
            android:layout_height="@dimen/reg_avatar_size"
            android:contentDescription="@string/description_avatar"
            tools:srcCompat="@drawable/ic_baseline_account_circle_48"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/padding_common"
            android:text="@string/change_photo"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/padding_common"
            android:layout_marginStart="@dimen/padding_login"
            android:text="@string/user_name"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login"
            android:background="@color/login_color"
            android:outlineSpotShadowColor="@color/black"
            android:padding="@dimen/padding_common" />

        <TextView
            android:id="@+id/login_title"
            android:layout_marginTop="@dimen/padding_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/padding_login"
            android:text="@string/login"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login"
            android:background="@color/login_color"
            android:outlineSpotShadowColor="@color/black"
            android:padding="@dimen/padding_common" />

        <TextView
            android:id="@+id/pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/padding_login"
            android:layout_marginTop="@dimen/padding_common"
            android:text="@string/password"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login"
            android:background="@color/login_color"
            android:padding="@dimen/padding_common" />

        <TextView
            android:id="@+id/retry_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/padding_login"
            android:layout_marginTop="@dimen/padding_common"
            android:text="@string/retry_pass"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/retry_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_login"
            android:background="@color/login_color"
            android:padding="@dimen/padding_common" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="@dimen/padding_login"
            android:text="@string/register" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        style="@style/Widget.AppTheme.ColorControlNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>