<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewAndEditPostActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:fabAlignmentMode="end"
        tools:title="@string/post_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancel"
        style="@style/Widget.AppTheme.CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_cancel"
        app:layout_anchor="@id/topAppBar"
        app:layout_anchorGravity="end"
        app:srcCompat="@drawable/ic_cancel_24" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/padding_common"
        app:layout_anchor="@id/topAppBar"
        app:layout_anchorGravity="bottom"
        tools:text="@sample/posts.json/data/content" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_save"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_baseline_check_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>